--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -28,4 +28,4 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m unittest discover -s tests -p "test_smith_wilson.py"
+        python -m unittest discover -s Test -p "test_smith_wilson.py"
